--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
-    <h1>Aqui vamos hacer un blog de post</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium illo delectus, repellat nulla quasi magni saepe reiciendis unde. Et, alias esse odit fugiat maiores nulla omnis quibusdam assumenda. Quidem, obcaecati.</p>
+   
+    <div class="container">
+        <div class="cabecera">
+            <h1>cabecera</h1>
+        </div>
+        <h1>Aqui vamos hacer un blog de post</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium illo delectus, repellat nulla quasi
+            magni saepe reiciendis unde. Et, alias esse odit fugiat maiores nulla omnis quibusdam assumenda. Quidem,
+            obcaecati.</p>
+    </div>
+
 </body>
+
 </html>
