--- a/blogpost.html
+++ b/blogpost.html
@@ -10,15 +10,20 @@
 </head>
 
 <body>
-   
+
     <div class="container">
         <div class="cabecera">
             <h1>cabecera</h1>
+            <div style="color: red; border:1px solid black;width: auto; box-shadow: 1px 0 7px 1px;">
+            <p>Parrafo de prueba</p>
+            </div>
         </div>
         <h1>Aqui vamos hacer un blog de post</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium illo delectus, repellat nulla quasi
             magni saepe reiciendis unde. Et, alias esse odit fugiat maiores nulla omnis quibusdam assumenda. Quidem,
             obcaecati.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab nihil excepturi sequi, nemo esse quo quibusdam
+            quidem est aut voluptate soluta nam labore facilis aspernatur. Minima nam eos obcaecati expedita?</p>
     </div>
 
 </body>
