--- a/blogpost.html
+++ b/blogpost.html
@@ -14,11 +14,11 @@
     <div class="container">
         <div class="cabecera">
             <h1>cabecera</h1>
-            <div style="color: red; border:1px solid black;width: auto; box-shadow: 1px 0 7px 1px;">
+            <div style="color: blue; border:1px solid black;width: auto; box-shadow: 1px 0 7px 1px;">
             <p>Parrafo de prueba</p>
             </div>
         </div>
-        <h1>Aqui vamos hacer un blog de post</h1>
+        <h1>Aqui vamos hacer un blog de cabecera</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium illo delectus, repellat nulla quasi
             magni saepe reiciendis unde. Et, alias esse odit fugiat maiores nulla omnis quibusdam assumenda. Quidem,
             obcaecati.</p>
@@ -28,4 +28,4 @@
 
 </body>
 
-</html>
+ </html>
