--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
             <p>Parrafo de prueba</p>
             </div>
         </div>
-        <h1>Aqui vamos hacer un blog de cabecera</h1>
+        <h1>Bienvenido a HyperBlog 2.0</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium illo delectus, repellat nulla quasi
             magni saepe reiciendis unde. Et, alias esse odit fugiat maiores nulla omnis quibusdam assumenda. Quidem,
             obcaecati.</p>
